tests/NormalTests/paczka1/small_fuzzy/96858775.err
Error in line 6: 1OF55BLSO A777 36,4
Error in line 7: 1OF55BLSO S729 90,1
Error in line 4: bdad0OxiMF S729 34,7
